Add a new page with detailed analysis of the data Fixes #2

--- a/tool/analysis.ipynb
+++ b/tool/analysis.ipynb
@@ -1025,7 +1025,7 @@
     "closed_stats = calculate_stats(dk_dialogues_prolific)\n",
     "\n",
     "stats_df = pd.DataFrame({\n",
-    "    'Metric': ['#Utterances per dialogue', '#Words per turn', 'Diversity (Distinct-2)'],\n",
+    "    'Metric': ['#Utterances per dialogue', '#Words per utterance', 'Diversity (Distinct-2)'],\n",
     "    'Open crowdsourcing': [f\"{open_stats[0]:.2f}\", f\"{open_stats[1]:.2f}\", f\"{open_stats[2]:.3f}\"],\n",
     "    'Closed crowdsourcing': [f\"{closed_stats[0]:.2f}\", f\"{closed_stats[1]:.2f}\", f\"{closed_stats[2]:.3f}\"]\n",
     "})\n",
